[#48891637] fix loginbox bug

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -70,6 +70,8 @@ en:
       "Sign in"
     signInWith:
       "Sign in with"
+    signInWithReador:
+      "Sign up on <b>Reador</b>"
   search:
     infobulle:
       "<u>Reador</u> can help you?"
