[#51087659] import first draft of Thibaut work on Reador

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -79,6 +79,8 @@ en:
       "select sources"
     searchbutton:
       "Go reador!"
+    searchadvanced:
+      "Advanced search"
   moreabout:
     title:
       "More about Reador!"
