--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -78,7 +78,9 @@ fr:
     sources:
       "selection des sources"
     searchbutton:
-      "Go reador!"
+      "Go !"
+    searchadvanced:
+      "Recherche avancée"
   moreabout:
     title:
       "En savoir plus sur Reador!"
