Added a better way to switch tab
+Changed "recherche avancé" to "semantic search"
+New button to switch tab

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -80,7 +80,7 @@ en:
     searchbutton:
       "Go reador!"
     searchadvanced:
-      "Advanced search"
+      "Semantic search"
   moreabout:
     title:
       "More about Reador!"
