--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -80,7 +80,7 @@ fr:
     searchbutton:
       "Go !"
     searchadvanced:
-      "Recherche avancée"
+      "Recherche sémantique"
   moreabout:
     title:
       "En savoir plus sur Reador!"
