Added the sources panel at the beginning

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -189,3 +189,9 @@ en:
         "Next >"
       go:
         "Go Reador"
+  items:
+    reminder:
+      source:
+        "Sources"
+      filtering:
+        "Filtering"
