Improved the items page
Now show only the tag
Added a user bar in each item ( for sharing, favorite, and mark as read
)
Added the number of sources and filters selected in the sources panel

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -195,3 +195,10 @@ en:
         "Sources"
       filtering:
         "Filtering"
+    users:
+      favorite:
+        "Favorite"
+      read:
+        "Mark as read"
+      share:
+        "Share this article"
