Moved the text to yml file

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -198,9 +198,10 @@ en:
       filtering:
         "Filtering"
     users:
-      favorite:
-        ""
-      read:
-        ""
       share:
         "Share : "
+    popover:
+      title:
+        "Added confirmation"
+      content:
+        "Tag well added"
