--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -198,10 +198,11 @@ fr:
       filtering:
         "Filtres"
     users:
-      favorite:
-        ""
-      read:
-        ""
       share:
         "Partager : "
+    popover:
+      title:
+        "Confirmation d'ajout"
+      content:
+        "Tag bien ajouté"
   
