Changed the layout of the new semantic search
Now the tab will be shown under each other

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -184,8 +184,8 @@ en:
   modal:
     select:
       "Select"
-    helper:
-      "Clic on sources or filters to start your semantic search"
+    add:
+      "Add"
     button:
       previous:
         "< Previous"
